--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,27 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇩🇪 德国-445.7KB/s(Youtube:不良林), server: s4.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s4.upyun.online, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-336.8KB/s(Youtube:不良林), server: app.ssfree.ru, port: 443, type: vmess, uuid: d3a9da12-d595-11ec-b109-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: app.ssfree.ru}}
+  - {name: 🇨🇳 中国-228.1KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16000, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇨🇳 中国-214.1KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26210, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇨🇳 中国-2.87MB/s(Youtube:不良林), server: 43.154.46.228, port: 49930, type: vmess, uuid: 051088e3-f62e-4cf6-a199-ab98adcb822b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [43.154.46.228]}}}
+  - {name: 🇺🇸 美国-1.02MB/s(Youtube:不良林), server: 1.ezydfdd.com, port: 443, type: vmess, uuid: 4ee48ad8-178c-40a2-9c52-a14e90a06e49, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /nmsl, ws-headers: {Host: 1.ezydfdd.com}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-445.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-336.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-214.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇩🇪 德国-445.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-336.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-214.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-445.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-336.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-214.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -36,20 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇩🇪 德国-445.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-336.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-214.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇩🇪 德国-445.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-336.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-214.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-445.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-336.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-214.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -65,7 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-445.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-336.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-214.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
