--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,27 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-380.4KB/s(Youtube:不良林), server: s3.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s3.upyun.online, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-914.0KB/s(Youtube:不良林), server: 43.154.72.145, port: 27091, type: vmess, uuid: 2f1e82e4-5319-4278-92aa-74d49c04683f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [43.154.72.145]}}}
-  - {name: 🇨🇳 中国-284.4KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26220, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇨🇳 中国-204.7KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26210, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇨🇳 中国-18.14MB/s(Youtube:不良林), server: nmb.boom.party, port: 21000, type: ssr, cipher: aes-256-cfb, password: Uk92CS, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 297930:nKtI1N, obfs-param: www.baidu.com}
+  - {name: 获取节点异常，请在下个时段重试, server: 1.1.1.1, port: 6666, type: ss, cipher: none, password: "@buliang00"}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-380.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-914.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-284.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-204.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.14MB/s(Youtube:不良林)
+      - 获取节点异常，请在下个时段重试
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-380.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-914.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-284.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-204.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.14MB/s(Youtube:不良林)
+      - 获取节点异常，请在下个时段重试
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-380.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-914.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-284.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-204.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.14MB/s(Youtube:不良林)
+      - 获取节点异常，请在下个时段重试
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +36,20 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-380.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-914.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-284.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-204.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.14MB/s(Youtube:不良林)
+      - 获取节点异常，请在下个时段重试
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-380.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-914.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-284.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-204.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.14MB/s(Youtube:不良林)
+      - 获取节点异常，请在下个时段重试
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-380.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-914.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-284.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-204.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.14MB/s(Youtube:不良林)
+      - 获取节点异常，请在下个时段重试
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +65,7 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-380.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-914.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-284.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-204.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.14MB/s(Youtube:不良林)
+      - 获取节点异常，请在下个时段重试
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
