--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,27 +5,39 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 获取节点异常，请在下个时段重试, server: 1.1.1.1, port: 6666, type: ss, cipher: none, password: "@buliang00"}
+  - {name: 🇨🇳 中国-659.3KB/s(Youtube:不良林), server: gz.zfnode.xyz, port: 59802, type: vmess, uuid: 79c82b92-bc4c-382c-8042-b50d27b9c564, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /ny, ws-headers: {Host: gz.zfnode.xyz}}
+  - {name: 🇨🇳 中国-9.61MB/s(Youtube:不良林), server: gz.zfnode.xyz, port: 59800, type: vmess, uuid: 79c82b92-bc4c-382c-8042-b50d27b9c564, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /ny, ws-headers: {Host: gz.zfnode.xyz}}
+  - {name: 🇨🇳 中国-13.90MB/s(Youtube:不良林), server: 120.233.10.123, port: 10025, type: ss, cipher: aes-128-gcm, password: 2daf156a-b9ee-4671-913a-4339ddd39021}
+  - {name: 🇰🇷 韩国-694.3KB/s(Youtube:不良林), server: 61.111.128.153, port: 8888, type: ss, cipher: rc4-md5, password: Xiongmao@^ios.ss}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 获取节点异常，请在下个时段重试
+      - 🇨🇳 中国-659.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.90MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-694.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 获取节点异常，请在下个时段重试
+      - 🇨🇳 中国-659.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.90MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-694.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 获取节点异常，请在下个时段重试
+      - 🇨🇳 中国-659.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.90MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-694.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -36,20 +48,29 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 获取节点异常，请在下个时段重试
+      - 🇨🇳 中国-659.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.90MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-694.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 获取节点异常，请在下个时段重试
+      - 🇨🇳 中国-659.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.90MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-694.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 获取节点异常，请在下个时段重试
+      - 🇨🇳 中国-659.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.90MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-694.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -65,7 +86,10 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 获取节点异常，请在下个时段重试
+      - 🇨🇳 中国-659.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.90MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-694.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
