--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,35 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-991.5KB/s(Youtube:不良林), server: gz.zfnode.xyz, port: 59802, type: vmess, uuid: 79c82b92-bc4c-382c-8042-b50d27b9c564, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /ny, ws-headers: {Host: gz.zfnode.xyz}}
   - {name: 🇨🇳 中国-1.37MB/s(Youtube:不良林), server: gz.zfnode.xyz, port: 59800, type: vmess, uuid: 79c82b92-bc4c-382c-8042-b50d27b9c564, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /ny, ws-headers: {Host: gz.zfnode.xyz}}
-  - {name: 🇨🇳 中国-13.90MB/s(Youtube:不良林), server: 120.233.10.123, port: 10025, type: ss, cipher: aes-128-gcm, password: 2daf156a-b9ee-4671-913a-4339ddd39021}
-  - {name: 🇰🇷 韩国-694.3KB/s(Youtube:不良林), server: 61.111.128.153, port: 8888, type: ss, cipher: rc4-md5, password: Xiongmao@^ios.ss}
-  - {name: 🇨🇳 中国-5.14MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇩🇪 德国-441.5KB/s(Youtube:不良林), server: 5.183.179.139, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
+  - {name: 🇦🇺 澳大利亚-591.5KB/s(Youtube:不良林), server: 185.167.116.252, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-991.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.90MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-694.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-441.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-591.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-991.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.90MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-694.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-441.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-591.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-991.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.90MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-694.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-441.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-591.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +44,26 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-991.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.90MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-694.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-441.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-591.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-991.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.90MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-694.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-441.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-591.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-991.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.90MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-694.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-441.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-591.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +79,9 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-991.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.90MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-694.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-441.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-591.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
