--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,10 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇨🇳 中国-1.26MB/s(Youtube:不良林), server: tanz-moble.0098dns01in.work, port: 35071, type: vmess, uuid: b83d0e8b-f4e6-3988-b45e-cc96400f0bc6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1023.6KB/s(Youtube:不良林), server: tanz-moble.0098dns01in.work, port: 35009, type: vmess, uuid: b83d0e8b-f4e6-3988-b45e-cc96400f0bc6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: tanz-moble.0098dns01in.work, port: 35012, type: vmess, uuid: b83d0e8b-f4e6-3988-b45e-cc96400f0bc6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-4.44MB/s(Youtube:不良林), server: tanz-unicom.0098dns01in.work, port: 35006, type: vmess, uuid: b83d0e8b-f4e6-3988-b45e-cc96400f0bc6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-336.9KB/s(Youtube:不良林), server: tanz-unicom.0098dns01in.work, port: 35021, type: vmess, uuid: b83d0e8b-f4e6-3988-b45e-cc96400f0bc6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-634.1KB/s(Youtube:不良林), server: s4.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s4.upyun.online, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-3.45MB/s(Youtube:不良林), server: 61.111.128.153, port: 8888, type: ss, cipher: rc4-md5, password: Xiongmao@^ios.ss}
+  - {name: 🇨🇳 中国-4.97MB/s(Youtube:不良林), server: 120.240.168.76, port: 10039, type: ss, cipher: aes-128-gcm, password: 2daf156a-b9ee-4671-913a-4339ddd39021}
+  - {name: 🇨🇳 中国-4.96MB/s(Youtube:不良林), server: 183.232.56.185, port: 10039, type: ss, cipher: aes-128-gcm, password: 2daf156a-b9ee-4671-913a-4339ddd39021}
+  - {name: 🇨🇳 中国-4.96MB/s(Youtube:不良林) 2, server: 120.240.168.73, port: 10039, type: ss, cipher: aes-128-gcm, password: 2daf156a-b9ee-4671-913a-4339ddd39021}
+  - {name: 🇨🇳 中国-5.04MB/s(Youtube:不良林), server: 120.240.168.72, port: 10039, type: ss, cipher: aes-128-gcm, password: 2daf156a-b9ee-4671-913a-4339ddd39021}
+  - {name: 🇨🇳 中国-5.01MB/s(Youtube:不良林), server: 120.240.168.71, port: 10039, type: ss, cipher: aes-128-gcm, password: 2daf156a-b9ee-4671-913a-4339ddd39021}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -17,20 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1023.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-336.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-634.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.96MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-5.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1023.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-336.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-634.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.96MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-5.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -38,10 +53,15 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1023.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-336.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-634.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.96MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-5.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -53,20 +73,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1023.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-336.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-634.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.96MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-5.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1023.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-336.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-634.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.96MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-5.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -74,10 +104,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1023.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-336.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-634.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.96MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-5.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -94,10 +129,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1023.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-336.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-634.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.96MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-5.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
