--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.26MB/s(Youtube:不良林), server: tanz-moble.0098dns01in.work, port: 35071, type: vmess, uuid: b83d0e8b-f4e6-3988-b45e-cc96400f0bc6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.44MB/s(Youtube:不良林), server: tanz-unicom.0098dns01in.work, port: 35006, type: vmess, uuid: b83d0e8b-f4e6-3988-b45e-cc96400f0bc6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-336.9KB/s(Youtube:不良林), server: tanz-unicom.0098dns01in.work, port: 35021, type: vmess, uuid: b83d0e8b-f4e6-3988-b45e-cc96400f0bc6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-634.1KB/s(Youtube:不良林), server: s4.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s4.upyun.online, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-3.45MB/s(Youtube:不良林), server: 61.111.128.153, port: 8888, type: ss, cipher: rc4-md5, password: Xiongmao@^ios.ss}
-  - {name: 🇨🇳 中国-4.97MB/s(Youtube:不良林), server: 120.240.168.76, port: 10039, type: ss, cipher: aes-128-gcm, password: 2daf156a-b9ee-4671-913a-4339ddd39021}
-  - {name: 🇨🇳 中国-4.96MB/s(Youtube:不良林), server: 183.232.56.185, port: 10039, type: ss, cipher: aes-128-gcm, password: 2daf156a-b9ee-4671-913a-4339ddd39021}
-  - {name: 🇨🇳 中国-4.96MB/s(Youtube:不良林) 2, server: 120.240.168.73, port: 10039, type: ss, cipher: aes-128-gcm, password: 2daf156a-b9ee-4671-913a-4339ddd39021}
-  - {name: 🇨🇳 中国-5.04MB/s(Youtube:不良林), server: 120.240.168.72, port: 10039, type: ss, cipher: aes-128-gcm, password: 2daf156a-b9ee-4671-913a-4339ddd39021}
-  - {name: 🇨🇳 中国-5.01MB/s(Youtube:不良林), server: 120.240.168.71, port: 10039, type: ss, cipher: aes-128-gcm, password: 2daf156a-b9ee-4671-913a-4339ddd39021}
+  - {name: 🇨🇳 中国-1.81MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇩🇪 德国-3.00MB/s(Youtube:不良林), server: s4.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s4.upyun.online, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.29MB/s(Youtube:不良林), server: tanz-moble.0098dns01in.work, port: 35012, type: vmess, uuid: b83d0e8b-f4e6-3988-b45e-cc96400f0bc6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-431.7KB/s(Youtube:不良林), server: tanz-moble.0098dns01in.work, port: 35069, type: vmess, uuid: b83d0e8b-f4e6-3988-b45e-cc96400f0bc6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.47MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇬🇧 英国-3.82MB/s(Youtube:不良林), server: jgwcc1.gaox.ml, port: 443, type: trojan, password: 7118b5f4-0ea4-4c11-be7f-11471cb91e4a, sni: jgwcc1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-10.06MB/s(Youtube:不良林), server: 61.111.128.153, port: 8888, type: ss, cipher: rc4-md5, password: Xiongmao@^ios.ss}
+  - {name: 🇺🇸 美国-1.44MB/s(Youtube:不良林), server: fhcarm2.gaox.ml, port: 443, type: trojan, password: f39bd244-f5fe-415c-8b98-a1e5250bf178, sni: fhcarm2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.36MB/s(Youtube:不良林), server: mplsgz1.ggbbba.xyz, port: 45785, type: ss, cipher: aes-256-gcm, password: gDQ8kr1HdHEK5DGU}
+  - {name: 🇬🇧 英国-2.93MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-336.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-634.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.96MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-5.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-431.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.82MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-10.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.93MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-336.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-634.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.96MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-5.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-431.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.82MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-10.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.93MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-336.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-634.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.96MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-5.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-431.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.82MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-10.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.93MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-336.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-634.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.96MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-5.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-431.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.82MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-10.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.93MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-336.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-634.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.96MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-5.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-431.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.82MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-10.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.93MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-336.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-634.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.96MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-5.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-431.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.82MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-10.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.93MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-336.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-634.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.96MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-5.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-431.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.82MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-10.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.93MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
