--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,51 +5,66 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 获取节点异常，请在下个时段重试, server: 1.1.1.1, port: 6666, type: ss, cipher: none, password: "@buliang00"}
+  - {name: 🇨🇳 台湾-526.5KB/s(Youtube:不良林), server: 60.249.3.229, port: 3389, type: trojan, password: 9029864a78d29a43, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-255.0KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26210, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇨🇳 中国-228.5KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16040, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 获取节点异常，请在下个时段重试
+      - 🇨🇳 台湾-526.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-255.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 获取节点异常，请在下个时段重试
+      - 🇨🇳 台湾-526.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-255.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 获取节点异常，请在下个时段重试
+      - 🇨🇳 台湾-526.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-255.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-526.5KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 获取节点异常，请在下个时段重试
+      - 🇨🇳 台湾-526.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-255.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 获取节点异常，请在下个时段重试
+      - 🇨🇳 台湾-526.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-255.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 获取节点异常，请在下个时段重试
+      - 🇨🇳 台湾-526.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-255.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -65,7 +80,9 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 获取节点异常，请在下个时段重试
+      - 🇨🇳 台湾-526.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-255.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
